tests/errors/invalid-dot-access/main.pa
# `.` followed by neither a field name nor a tuple index.
def main = (1, 2).+
